Fix link color
Incoming were not style at all and outgoing were invisible.

--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -910,6 +910,9 @@ input.search {
   .message-detail .incoming .bubble,
   .message-list .incoming .bubble {
     color: white; }
+    .message-detail .incoming .bubble a,
+    .message-list .incoming .bubble a {
+      color: white; }
     .message-detail .incoming .bubble::before,
     .message-list .incoming .bubble::before {
       left: -10px;
@@ -941,12 +944,12 @@ input.search {
     .message-detail .outgoing .bubble .attachments a, .message-detail .outgoing .bubble .content a,
     .message-list .outgoing .bubble .attachments a,
     .message-list .outgoing .bubble .content a {
-      color: #f3f3f3; }
+      color: #454545; }
     .message-detail .outgoing .bubble .content::selection, .message-detail .outgoing .bubble .content a::selection,
     .message-list .outgoing .bubble .content::selection,
     .message-list .outgoing .bubble .content a::selection {
-      color: #454545;
-      background: white; }
+      color: white;
+      background: #454545; }
     .message-detail .outgoing .bubble .content::-moz-selection, .message-detail .outgoing .bubble .content a::-moz-selection,
     .message-list .outgoing .bubble .content::-moz-selection,
     .message-list .outgoing .bubble .content a::-moz-selection {
